# acalsim

./: .clang-format  .editorconfig  .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  .style.yapf  CMakeLists.txt  Doxyfile  LICENSE  PYTORCH_RISCV_BUILD_GUIDE.md  README.md  SST-INTEGRATION.md  makefile
.gitlab/: .gitlab-ci.yml
cmake/: ACALSimUtility.cmake  GetLibtorch.cmake
docs/: EXAMPLES.md  MIGRATION_GUIDE.md  README.md  SST_COMPARISON.md  about.md  advanced-scheduler-optimization-plan.md  context-switch-optimization.md  contributors.md
docs/for-developers/: thread-manager-v1.md  thread-manager.md
docs/for-users/: compound-packet.md  event-driven-simulation.md  logging.md  recycle-container.md  simchannel.md  simconfig-cli.md  simport.md  simtensor.md  simtrace-container.md
docs/getting-started/: env-setup.md  for-developers.md  for-users.md
docs/papers/: ACALSim_Framework_Paper_2025.md
docs/sst-integration/: DIAGRAM_GENERATION.md  HYBRID_MULTI_GPU_DIAGRAMS.md  MULTI_RANK_DIAGRAM_GUIDE.md  README.md  SCALABLE_MULTI_RANK.md  architecture-diagram-compact.puml  architecture-diagram-compatible.puml  architecture-diagram-simple.md  architecture-diagram.md  architecture-diagram.puml  generate-diagram.sh  generate-multi-gpu-diagrams.sh  generate-multi-rank-diagrams.sh  generate-scalable-diagram.sh  hybrid-multi-gpu-architecture.puml  hybrid-multi-gpu-sequence.puml  hybrid-multi-gpu-topology.puml  integration-guide.md  multi-rank-deployment.puml  multi-rank-layers.puml  multi-rank-minimal.puml  multi-rank-scalable-architecture.puml  multi-rank-simple.puml  pytorch-device-gemm.md  riscv-examples.md  scalable-multi-rank-architecture.puml  test-minimal.puml
docs/tutorials/: pytorch-acalsim-backend-tutorial.md
gtest/: CMakeLists.txt
gtest/UnitTest/: CMakeLists.txt  TestSimTensor.cc
gtest/testCrossBar/: CMakeLists.txt  main.cc
gtest/testDAG/: CMakeLists.txt  DAGSchedulerTest.cc  DAGSchedulerTest.hh  main.cc
gtest/testPETile/: CMakeLists.txt  testPETile.cc
gtest/testSimChannel/: CMakeLists.txt  TestSimChannel.cc  TestSimChannel.hh  main.cc
include/: ACALSim.hh
include/HSA/: HSAComputeComponent.hh  HSAEvents.hh  HSAHostComponent.hh
include/channel/: ChannelPort.hh  ChannelPortManager.hh  ChannelPortManager.inl  SimChannel.hh  SimChannel.inl
include/common/: Arbiter.hh  BitVector.hh  FifoQueue.hh  FifoQueue.inl  HashVector.hh  HashVector.inl  LinkManager.hh  LinkManager.inl  PriorityQueue.hh  PriorityQueue.inl  UnorderedRequestQueue.hh
include/config/: ACALSimConfig.hh  CLIManager.hh  CLIManager.inl  SimConfig.hh  SimConfig.inl  SimConfigManager.hh
include/container/: ChromeTraceRecord.hh  JsonContainer.hh  SharedContainer.hh  (+1 more)
libs/: CMakeLists.txt
libs/HSA/: HSAComputeComponent.cc  HSAHostComponent.cc  Makefile
libs/channel/: ChannelPort.cc  ChannelPortManager.cc
libs/common/: Arbiter.cc  BitVector.cc
libs/config/: ACALSimConfig.cc  CLIManager.cc  SimConfig.cc  SimConfigManager.cc
libs/container/: SimTraceContainer.cc
libs/container/RecycleContainer/: RecycleContainer.cc
libs/event/: CallbackEvent.cc  SimEvent.cc
libs/hw/: CrossBar.cc
libs/module/: Pytorch.cc
libs/packet/: DataPacket.cc  EventPacket.cc  SimPacket.cc
libs/port/: MasterPort.cc  SimPortManager.cc  SlavePort.cc
libs/sim/: DeviceManager.cc  PipeRegisterManager.cc  STSim.cc  SimAddressMap.cc  SimBase.cc  SimModule.cc  SimTop.cc  TaskManager.cc  ThreadManager.cc
libs/sim/ThreadManagerV1/: TaskV1.cc
libs/sim/ThreadManagerV5/: TaskV5.cc
libs/sim/ThreadManagerV6/: TaskV6.cc
libs/sst/: ACALSimComputeDeviceComponent.cc  ACALSimDeviceComponent.cc  ACALSimMMIODevice.cc  QEMUBinaryComponent.cc
libs/utils/: Arguments.cc  Logging.cc
libs/workloads/graph/: DAG.cc
libs/workloads/tensor/: SimTensor.cc  SimTensorManager.cc
scripts/: acalsim.py  block-comment-gen.py  gen-models.sh  init-submodules.sh  license-update.py  regression.py  website-deploy.sh
src/: CMakeLists.txt
src/pytorch-acalsim-backend/: README.md  pyproject.toml  setup.py
src/pytorch-acalsim-backend/acalsim_backend/: __init__.py  backend.py  compiler.py  ir.py
src/pytorch-acalsim-backend/codegen/: __init__.py  riscv_codegen.py
src/pytorch-acalsim-backend/examples/: matmul_demo.py  simple_mlp.py  transformer_attention.py
src/pytorch-acalsim-backend/examples/output_bmm/: graph_0.ir
src/pytorch-acalsim-backend/examples/output_chained/: graph_0.c  graph_0.h  graph_0.ld  graph_0_weights.c
src/pytorch-acalsim-backend/examples/output_matmul/: graph_0.c  graph_0.h  graph_0_weights.c
src/pytorch-acalsim-backend/tests/: __init__.py  test_backend.py  test_ir.py
src/sst-riscv/: ACALSimComponent.cc  ACALSimComponent.hh  ACALSim_Minimal.hh  CMakeLists.txt  QUICKSTART.md  README.md  RISCVSoCComponent.cc  RISCVSoCComponent.hh  RISCVSoCStandalone.cc  RISCVSoCStandalone.hh  SST_INTEGRATION_GUIDE.md  build.sh  riscv_dual_core_stats.csv  sst-acalsim  test_load.py
src/sst-riscv/examples/: RISCV_README.md  SimpleProcessor.hh  multicore_system.py  riscv_dual_core.py  riscv_single_core.py  simple_system.py
src/testBlackBear/libs/: CMakeLists.txt
src/testBlackBear/libs/cachesim/: CacheSim.cc
src/testBlackBear/libs/mcpusim/: MCPUSim.cc
src/testBlackBear/libs/memsim/: MemSim.cc
src/testBlackBear/libs/nocsim/: NocSim.cc
src/testBlackBear/libs/pesim/: PESim.cc
src/testBlackBear/libs/system/: DataMovementManager.cc
src/testPETile/libs/: AXIBus.cc  CMakeLists.txt  CPUReqEvent.cc  CPUTraffic.cc  MemReq.cc  PETile.cc  SRAM.cc
src/testSimPort/: CMakeLists.txt  main.cc
src/testSimPort/include/: BasePacket.hh  CallBackEvent.hh  LimitedObjectContainer.hh  OutStandingReqQueue.hh  TestSimPortTop.hh
src/testSimPort/include/hw/: CPUCore.hh  CrossBar.hh  Memory.hh
src/testSimPort/libs/: BasePacket.cc  CMakeLists.txt  TestSimPortTop.cc
src/testSimPort/libs/hw/: CPUCore.cc  CrossBar.cc  Memory.cc
systemc/: CMakeLists.txt
systemc/libs/: CMakeLists.txt
systemc/libs/packet/: SCSimPacket.cc
systemc/libs/sim/: SCInterface.cc  SCSimBase.cc  SCSimTop.cc  SCThreadManager.cc
(+649 files in other folders)
